Fix image crop overflow

--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -1,3 +1,17 @@
+.box-crop .box-source {
+  max-width: 100%;
+  overflow: auto;
+}
+
+@media screen and (max-width: 600px) {
+  .box-crop .box-source {
+    display: none;
+  }
+  .change-picture .padded {
+    display: none;
+  }
+}
+
 .followButton {
   white-space: nowrap;
   font-size: 10px;
